src/components/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.font-curvy{
    font-family: 'vollkorn', Georgia, 'Times New Roman', Times, serif;
}
.font-straight{
    font-family: 'karla', Arial, Helvetica, sans-serif;
}
.opensans{
    font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif
}
.highlight{
    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 40%, #c6f6d5 40%);
}
#burger-wrapper.true{
    @apply text-white;
}
#burger-wrapper.false{
    @apply text-gray-900;
}
#SideMenu{
    transform: translateX(100%);
    transition: transform .5s;

}
#SideMenu.true{
    transform: translateX(0%);
    transition: transform .5s

}
.Directory {
    overflow: hidden;
}
.Directory .column {
    height: 600px;
    overflow: scroll;
}
.DirectoryCta {
    display: flex;
    justify-content: space-between;
}
.DirectoryCta.inactive{
    margin-bottom: -4px;
    color: #1a202c4D; 
    border-top: 4px solid #1a202c4D; 
    border-bottom: 4px solid transparent
}
.DirectoryCta.active + a.inactive{
    border-top: 4px solid #1a202c;
}
.DirectoryCta:last-of-type{
    border-bottom: 4px solid #1a202c4D; 
}
.DirectoryCta.active{
    margin-bottom: -4px;
    color: #1a202c; 
    border-top: 4px solid #1a202c; 
    border-bottom: 4px solid #1a202c;
}
.DirectoryCta.inactive img {
    opacity: 40%;
}
.listing-icon{
    @apply border-gray-900;
    display: inline-block;
    border-width: 2px;
    border-radius: 50%;
    height: 1rem;
    width: 1rem;
    margin: 0 0.5rem;
}
.listing-icon.smb{
    background-color: #fcf8b7;
}
.listing-icon.np{
    background-color: #f5abb2;
}
.Accordion.smb{
    background-color: #fff5a7;
}
.Accordion.np{
    background-color: #f9bbc0;
}
.accordion-panel{
    max-height: 0px;
    overflow: hidden;
}
.accordion-panel.open{
    @apply border-b-4;
    @apply border-gray-900;
    max-height: 100%;
}
.arrow-right{
    @apply border-gray-900;
    width: 0; 
    height: 0; 
    border-top: 8px solid transparent;
    border-bottom: 8px solid transparent;
    
    border-left: 10px solid;
}
.arrow-down {
    width: 0; 
    height: 0; 
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    
    border-top: 10px solid;
}
.ListingPage {
    @apply flex;
    @apply flex-row;
    @apply box-border;
    max-height: 700px;
}
.ListingPage .image-carousel {
    max-height: 700px;
}

@import url('./markdown.scss');

